@@ -1,3 +1,8 @@
+2004-06-22  Richard Hult  <richard@imendio.com>
+
+	* src/planner-task-dialog.c (task_dialog_update_sensitivity):
+	Don't make work insensitive for fixed duration.
+
 2004-06-21  Richard Hult  <richard@imendio.com>
 
 	* data/stylesheets/Makefile.am:
@@ -36,8 +41,9 @@
 
 2004-06-21 Alvaro del Castillo  <acs@barrapunto.com>
 
-	* src/planner-sql-plugin.c: change in planner_application_get_gconf_client
-	that breaks CVS compile, detected by lincoln. Change to use the new API.
+	* src/planner-sql-plugin.c: change in
+	planner_application_get_gconf_client that breaks CVS compile,
+	detected by lincoln. Change to use the new API.
 
 2004-06-19  Richard Hult  <richard@imendio.com>
 
